--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ body , html{
 
 .club-title {
     font-family: Poppins, sans-serif;
-    font-size: 70px;
+    font-size: 65px;
     font-weight: 500;
     line-height: 74px;
     letter-spacing: -1.1399999856948853px;
@@ -252,10 +252,11 @@ body {
 
 .item-row {
     text-align: right;
+    margin-bottom: 40px;
 }
 
 .item-title {
-    font-family: Poppins;
+    font-family: Poppins , sans-serif;
     font-size: 90px;
     font-weight: 400;
     line-height: 52.8px;
@@ -338,6 +339,8 @@ body {
 
 .networking-logo {
     text-align: right;
+    margin-bottom: 40px;
+
 }
 
 .networking-title {
